tests/vertical-slice/accept/let_record_destructure_sums_fields.hew
// Validation: irrefutable record-let desugar produces correct field values.
// `let Point { x, y } = p` must bind x=1 and y=2; main exits with x+y = 3.
type Point { x: i64; y: i64; }

fn main() -> i64 {
    let p = Point { x: 1, y: 2 };
    let Point { x, y } = p;
    x + y
}
